--- a/src/templates/components/validate-modal.html
+++ b/src/templates/components/validate-modal.html
@@ -13,6 +13,7 @@
 <div class="info-bar -mobile">
   Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!
 </div>
+<a href="{% url 'edit_document' object.id object.slug %}">Editar projeto</a>
 {% endblock content %}
 
 </div>
