Initial contextual toolbox positioning
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -54,6 +54,7 @@
 @import 'components/side-bar';
 @import 'components/tool-bar';
 @import 'components/dashboard-list';
+@import 'components/contextual-toolbar';
 
 // Vendor
 @import 'vendor/tooltip';
