--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -22,6 +22,9 @@
   {% endif %}
 
   {% include "components/tool-bar.html" with pk=object.id %}
+  {% for message in messages %}
+  {% include "components/info-message.html" with message=message %}
+  {% endfor %}
 </main>
 
 {% include "components/validate-modal.html" %}
@@ -33,6 +36,7 @@
 {% if page == 'editor' %}
 <script src="{% static '/js/utils/position.js' %}"></script>
 <script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js-polyfill.js' %}"></script>
+<script src="{% static '/js/components/infoMessage/view.js' %}"></script>
 <script src="{% static '/js/components/documentEditor/view.js' %}"></script>
 <script src="{% static '/js/components/contextualToolbar/view.js' %}"></script>
 <script src="{% static '/js/components/navBar/view.js' %}"></script>
