Improve validate modal

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -55,6 +55,7 @@
 @import 'components/tool-bar';
 @import 'components/dashboard-list';
 @import 'components/contextual-toolbar';
+@import 'components/info-message';
 
 // Vendor
 @import 'vendor/tooltip';
