--- a/src/templates/components/info-message.html
+++ b/src/templates/components/info-message.html
@@ -1,5 +1,12 @@
 <div class="info-message js-infoMessage">
   <div class="message">
+    <span class="icon js-emoji"></span>
     <span class="text">{{ message }}</span>
   </div>
+  <div class="actions js-actions">
+    <a href="#" class="action js-actionLink">
+    </a>
+  </div>
+  <div class="progress js-progress"></div>
+  <div class="background"></div>
 </div>
