--- a/src/templates/components/validate-modal.html
+++ b/src/templates/components/validate-modal.html
@@ -5,15 +5,14 @@
 {% block extra_classes %}-validate js-validateModal{% endblock %}
 
 {% block title_modal %}
-  Validar Dados
+
 {% endblock %}
 
 
 {% block content %}
-<div class="info-bar -mobile">
-  Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!
-</div>
-<a href="{% url 'edit_document' object.id object.slug %}">Editar projeto</a>
+<h1>Validar Dados</h1>
+<p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!</p>
+<a href="{% url 'edit_document' object.id object.slug %}" class="app-button -green">Editar projeto</a>
 {% endblock content %}
 
 </div>
