Improve filter modal css

--- a/src/static/scss/components/_app-button.scss
+++ b/src/static/scss/components/_app-button.scss
@@ -1,7 +1,7 @@
 .app-button {
   font-size: $font-size-mili;
 
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
 
