--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -56,6 +56,7 @@
 @import 'components/dashboard-list';
 @import 'components/contextual-toolbar';
 @import 'components/info-message';
+@import 'components/link-back';
 
 // Vendor
 @import 'vendor/tooltip';
