--- a/src/templates/components/filter-modal.html
+++ b/src/templates/components/filter-modal.html
@@ -86,5 +86,5 @@
     </div>
   </form>
 
-  <a href="#" class="solid-button -green js-applyFilter">Salvar</a>
+  <a href="#" class="app-button -green js-applyFilter">Aplicar</a>
 {% endblock content %}
