--- a/src/static/scss/components/_contextual-toolbar.scss
+++ b/src/static/scss/components/_contextual-toolbar.scss
@@ -2,6 +2,7 @@
   position: absolute;
   background-color: rgba(0, 0, 0, 0.75);
   color: #FFF;
+  user-select: none;
 
   & > ul {
     display: flex;
