--- a/src/templates/components/confirm-form-modal.html
+++ b/src/templates/components/confirm-form-modal.html
@@ -13,7 +13,7 @@
 <div class="info-bar -mobile">
   Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!
 </div>
-<button class="app-button -green js-close">Salvar</button>
+<button class="app-button -green js-close" form="invited_group_form">Salvar</button>
 {% endblock content %}
 
 </div>
