--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -35,7 +35,7 @@
     <h2>Criar Grupo Fechado</h2>
     <a href="#" class="link-back">Voltar</a>
   </header>
-  <form method="POST">
+  <form method="POST" id="invited_group_form">
     {% csrf_token %}
     {{form.non_field_errors}}
     <div class="input-group">
@@ -59,9 +59,13 @@
         <div class="filter js-searchFilter">Filtros</div>
       </div>
       <div class="filters">
-        <span class="title _hidden js-title">Filtros adicionados:</span>
-        <ul class="tags js-tags"></ul>
-        <div class="filter js-clearFilters">Limpar</div>
+        <span class="title js-title">Filtros adicionados:</span>
+        <ul class="list js-tags">
+          <span class="item">Filtro 1</span>
+          <span class="item">Filtro 2</span>
+          <span class="item">Filtro 3</span>
+        </ul>
+        <div class="clear js-clearFilters">Limpar Filtros</div>
       </div>
     </div>
 
@@ -79,10 +83,10 @@
     </div>
 
     <a class="app-button -green js-openConfirmFormButton">Continuar</a>
-    {% include "components/confirm-form-modal.html" %}
   </form>
 </main>
 {% include "components/filter-modal.html" %}
+{% include "components/confirm-form-modal.html" %}
 
 {% endblock content %}
 
