--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -32,20 +32,26 @@
 
 <main class="section-group">
   <header>
+    {% if object %}
+    <h2>Editar Grupo Fechado</h2>
+    {% else %}
     <h2>Criar Grupo Fechado</h2>
+    {% endif %}
+
     <a href="#" class="link-back">Voltar</a>
+
   </header>
   <form method="POST" id="invited_group_form">
     {% csrf_token %}
     {{form.non_field_errors}}
     <div class="input-group">
       <div class="input-text">
-        <input type="text" name="group_name" id="id_group_name">
+        <input type="text" name="group_name" id="id_group_name" {% if object %}value="{{ object.thematic_group.name }}"{% endif %}>
         <label for="id_group_name">Nome do grupo: </label>
       </div>
       <div class="input-text">
         {{form.closing_date.errors}}
-        <input type="text" name="closing_date" required="" id="id_closing_date">
+        {{form.closing_date}}
         <label for="id_closing_date">Data de encerramento:</label>
       </div>
     </div>
@@ -69,15 +75,41 @@
       </div>
     </div>
 
-    <div class="input-group">
+    <div class="input-group js-participants">
+      {% if object.thematic_group.participants.all %}
+      {% for participant in object.thematic_group.participants.all %}
+      <input type="hidden" name="participants" value="{{participant.id}}">
+      {% endfor %}
+      {% endif %}
       <div class="input-profile -empty">
         <span class="label"><b class="js-countSelectables">0</b>Perfis encontrados com o filtro </span>
         <div class="profiles js-inputProfile">
         </div>
       </div>
       <div class="input-profile -empty">
-        <span class="label"><b class="js-countSelecteds">0</b>Participantes atuais no grupo</span>
+        <span class="label"><b class="js-countSelecteds">{{object.thematic_group.participants.count|default_if_none:0}}</b>Participantes atuais no grupo</span>
         <div class="profiles js-selectedProfile">
+          {% if object.thematic_group.participants.all %}
+          {% for participant in object.thematic_group.participants.all %}
+            <div class="user-profile js-user" data-user-id="{{ participant.id }}">
+              <img class="avatar" src="{{participant.profile.avatar|default_if_none:'/new-wikilegis/static/img/avatar.png'}}">
+              <div class="info">
+                <span class="name">{{ participant.get_full_name }}</span>
+                {% for theme in participant.themes.all %}
+                  <div class="tags">
+                    <div class="theme-tag">
+                      <span class="dot" style="background-color: {{theme.color}};"></span>
+                       {{theme.name}}
+                    </div>
+                  </div>
+                {% endfor %}
+              </div>
+              <div class="action">
+                <div class="remove"></div>
+              </div>
+            </div>
+          {% endfor %}
+          {% endif %}
         </div>
       </div>
     </div>
