--- a/src/templates/components/confirm-form-modal.html
+++ b/src/templates/components/confirm-form-modal.html
@@ -4,16 +4,13 @@
 
 {% block extra_classes %}-confirm js-confirmFormModal{% endblock %}
 
-{% block title_modal %}
-  Confirmar Dados
-{% endblock %}
+{% block title_modal %}{% endblock %}
 
 
 {% block content %}
-<div class="info-bar -mobile">
-  Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!
-</div>
-<button class="app-button -green js-close" form="invited_group_form">Salvar</button>
+<h1>Estamos quase lá!</h1>
+<p>Para finalizar seu cadastro, é só clicar no botão abaixo! 😉 Integrantes inseridos ou removidos do grupo sempre serão notificados via e-mail, ok? </p>
+<button class="app-button -green" form="invited_group_form">Enviar</button>
 {% endblock content %}
 
 </div>
