--- a/src/templates/components/info-message.html
+++ b/src/templates/components/info-message.html
@@ -1,12 +1,9 @@
-<div class="info-message js-infoMessage">
+<div class="info-message -success js-infoMessage">
   <div class="message">
-    <span class="icon js-emoji"></span>
+    <span class="icon js-emoji">😀</span>
     <span class="text">{{ message }}</span>
   </div>
   <div class="actions js-actions">
-    <a href="#" class="action js-actionLink">
-    </a>
+    <a href="#" class="action js-closeMessage">Fechar</a>
   </div>
-  <div class="progress js-progress"></div>
-  <div class="background"></div>
 </div>
