--- a/src/templates/components/validate-modal.html
+++ b/src/templates/components/validate-modal.html
@@ -10,9 +10,9 @@
 
 
 {% block content %}
-<h1>Validar Dados</h1>
-<p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!</p>
-<a href="{% url 'edit_document' object.id object.slug %}" class="app-button -green">Editar projeto</a>
+<h1>Calma aí 😀</h1>
+<p>É que alguns dados obrigatórios não foram informados. 🙁 Antes da gente prosseguir, você pode dar uma conferida e preencher o que falta?</p>
+<a href="{% url 'edit_document' object.id object.slug %}" class="app-button -green">Conferir</a>
 {% endblock content %}
 
 </div>
