--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -64,7 +64,7 @@
         <label for="name">Buscar perfis por nome ou email: </label>
         <div class="filter js-searchFilter">Filtros</div>
       </div>
-      <div class="filters">
+      <div class="filters _hidden">
         <span class="title js-title">Filtros adicionados:</span>
         <ul class="list js-tags">
           <span class="item">Filtro 1</span>
