Fix toolbar hide
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -1,4 +1,4 @@
-<div class="contextual-toolbar js-contextualToolbar">
+<div class="contextual-toolbar js-contextualToolbar _hidden">
   <ul class="js-typeList">
     <li class="_hidden js-excerptType" data-excerpt-type="titulo">Título</li>
     <li class="_hidden js-excerptType" data-excerpt-type="capitulo">Capítulo</li>
