--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -13,7 +13,7 @@
 {% block content %}
 
 <main class="document-editor -active js-documentEditor" data-document-id="{{ object.id }}">
-  <article>
+  <article class="js-textEditorWrapper">
     <header class="-editable js-documentHeader">
       <h1 class="js-title">{{ object.title }}</h1>
       <textarea name="title" class="title _hidden js-titleInput js-input"></textarea>
