--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -28,6 +28,7 @@
 </main>
 
 {% include "components/validate-modal.html" %}
+{% include "components/public-participation-modal.html" %}
 
 {% endblock content %}
 
