Create error list style

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -57,6 +57,7 @@
 @import 'components/contextual-toolbar';
 @import 'components/info-message';
 @import 'components/link-back';
+@import 'components/error-list';
 
 // Vendor
 @import 'vendor/tooltip';
