--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -14,7 +14,7 @@
   <h1>Data de encerramento</h1>
   <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!</p>
   <div class="input-text">
-    <input type="text" name="title" maxlength="200" required="" id="id_date">
+    <input type="text" name="title" maxlength="200" id="id_date">
     <label for="id_date">Data</label>
   </div>
   <button class="app-button -green">Próximo</button>
@@ -23,7 +23,7 @@
   <h1>Data de encerramento</h1>
   <p>Analise os projetos de lei e contribua com sugestões de nova redação a artigos ou parágrafos. Os deputados relatores das proposições acompanham as participações e podem adotar a sua ideia!</p>
   <div class="input-text">
-    <input type="text" name="title" maxlength="200" required="" id="id_date">
+    <input type="text" name="title" maxlength="200" id="id_date">
     <label for="id_date">Data</label>
   </div>
   <button class="app-button -green">Próximo</button>
