Add keyboard default behavior
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/components/_contextual-toolbar.scss
+++ b/src/static/scss/components/_contextual-toolbar.scss
@@ -4,8 +4,20 @@
   color: #FFF;
   user-select: none;
 
+  &:focus {
+    background-color: red;
+  }
+
   & > ul {
     display: flex;
+
+    & > li > button {
+      background-color: blue;
+
+      &:focus {
+        background-color: green;
+      }
+    }
 
     & > li + li {
       margin-left: 1rem;
