--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -1,14 +1,14 @@
 <div class="contextual-toolbar js-contextualToolbar _hidden">
   <ul class="js-typeList">
-    <li class="_hidden js-excerptType" data-excerpt-type="titulo">Título</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="capitulo">Capítulo</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="secao">Seção</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="subsecao">Subseção</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="continuacao">Continuação</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="artigo">Artigo</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="paragrafo">Parágrafo</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="inciso">Inciso</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="alinea">Alínea</li>
-    <li class="_hidden js-excerptType" data-excerpt-type="item">Item</li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="titulo">Título</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="capitulo">Capítulo</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="secao">Seção</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="subsecao">Subseção</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="continuacao">Continuação</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="artigo">Artigo</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="paragrafo">Parágrafo</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="inciso">Inciso</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="alinea">Alínea</button></li>
+    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="item">Item</button></li>
   </ul>
 </div>
