Update keyboard behavior on editor
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/components/_contextual-toolbar.scss
+++ b/src/static/scss/components/_contextual-toolbar.scss
@@ -8,19 +8,11 @@
     background-color: red;
   }
 
-  & > ul {
-    display: flex;
+  & > div > button {
+    background-color: blue;
 
-    & > li > button {
-      background-color: blue;
-
-      &:focus {
-        background-color: green;
-      }
-    }
-
-    & > li + li {
-      margin-left: 1rem;
+    &:focus {
+      background-color: green;
     }
   }
 }
