--- a/src/templates/components/contextual-toolbar.html
+++ b/src/templates/components/contextual-toolbar.html
@@ -1,14 +1,14 @@
 <div class="contextual-toolbar js-contextualToolbar _hidden">
-  <ul class="js-typeList">
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="titulo">Título</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="capitulo">Capítulo</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="secao">Seção</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="subsecao">Subseção</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="continuacao">Continuação</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="artigo">Artigo</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="paragrafo">Parágrafo</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="inciso">Inciso</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="alinea">Alínea</button></li>
-    <li><button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="item">Item</button></li>
-  </ul>
+  <div class="js-typeList">
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="titulo">Título</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="capitulo">Capítulo</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="secao">Seção</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="subsecao">Subseção</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="continuacao">Continuação</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="artigo">Artigo</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="paragrafo">Parágrafo</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="inciso">Inciso</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="alinea">Alínea</button>
+    <button tabindex="2" class="js-excerptType _hidden" data-excerpt-type="item">Item</button>
+  </div>
 </div>
