Create participation info modal

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -75,7 +75,7 @@
   &.-public {
     padding: 0 2rem 2rem 2rem;
 
-    & > .content > .step {
+    & > .content {
       width: 80%;
       margin: 0 auto;
 
