--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -1,3 +1,7 @@
+body.-home .nav-bar {
+  @extend .-shadow;
+}
+
 body.-open-menu .nav-bar {
   background-color: $color-brand;
 
@@ -85,7 +89,6 @@ body.-white .nav-bar {
     &.-beta::after {
       font-size: .5rem;
       font-weight: 900;
-      letter-spacing: 2px;
 
       position: relative;
       right: 1.875rem;
@@ -96,6 +99,7 @@ body.-white .nav-bar {
       width: 0;
 
       content: 'Beta';
+      letter-spacing: 2px;
 
       color: $color-deep-gray;
     }
@@ -167,9 +171,12 @@ body.-white .nav-bar {
       position: relative;
 
       display: flex;
+      display: flex;
+      align-items: center;
       align-items: center;
 
       margin-top: .25rem;
+      margin-right: 1rem;
 
       cursor: pointer;
 
@@ -202,36 +209,159 @@ body.-white .nav-bar {
 
       & > .list {
         position: absolute;
-        top: 1.7rem;
+        top: 1.3rem;
         left: -.2rem;
 
         display: none;
         flex-direction: column;
 
-        max-width: 20rem;
+        width: 25rem;
+        padding: .5rem 0;
 
         border: 1px solid $color-grayish;
         background-color: #FFF;
 
-        & > a {
-          font-size: $font-size-micro;
-          line-height: 1.4;
+        @include card-shadow;
 
-          padding: .75rem 1rem;
+        & > .title {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          padding: .5rem 1.25rem;
+
+          cursor: text;
+
+          & > span {
+            font-size: $font-size-centi;
+            font-weight: bold;
+            line-height: 1.4;
+
+            color: $color-deep-gray;
+
+            &.-closed {
+              @include icon('padlock');
+
+              &::before {
+                font-size: $font-size-micro;
+
+                margin-right: .35rem;
+              }
+            }
+          }
+
+          & > a {
+            font-size: $font-size-micro;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            padding: .5rem 0;
+
+            cursor: pointer;
+            letter-spacing: .5px;
+
+            color: $color-brand;
+
+            &:hover {
+              opacity: .8;
+            }
+          }
+
+          & > .-add {
+            @include icon('add');
+
+            &::before {
+              font-size: $font-size-nano;
+
+              margin-right: .35rem;
+            }
+          }
+        }
+
+        & > a {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          padding: 1rem 1.5rem;
 
           color: $color-deep-gray;
 
           &:hover {
-            color: $color-brand;
-          }
+            & > span {
+              color: $color-brand;
+            }
 
-          &.-closed {
-            @include icon('padlock');
-
-            &::before {
-              margin-right: .25rem;
+            & > .info > .item {
+              color: $color-brand;
             }
           }
+
+          & > span {
+            font-size: $font-size-mili;
+            line-height: 1.4;
+          }
+
+          & > .info {
+            display: flex;
+            align-items: center;
+
+            & > * + * {
+              margin-left: .75rem;
+            }
+
+            & > .item {
+              display: flex;
+              align-items: center;
+              font-size: $font-size-micro;
+
+              &.-versions {
+                @include icon('document');
+
+                &::before {
+                  font-size: $font-size-micro;
+
+                  margin-right: .25rem;
+                }
+              }
+
+              &.-participants {
+                @include icon('avatar');
+
+                &::before {
+                  font-size: $font-size-micro;
+
+                  margin-right: .25rem;
+                }
+              }
+
+              &.-opinions {
+                @include icon('comment-black');
+
+                &::before {
+                  font-size: $font-size-micro;
+
+                  margin-right: .25rem;
+                }
+              }
+
+              &.-blue {
+                color: $color-twitter;
+              }
+
+              &.-green {
+                color: $color-brand;
+              }
+            }
+          }
+        }
+
+        & > hr {
+          margin: .5rem 0;
+
+          color: $color-grayish;
         }
       }
     }
