Add active status to toolbar

--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -43,6 +43,12 @@
         font-weight: 400 !important;
       }
 
+      &.-active {
+        > svg path {
+          fill: $color-brand;
+        }
+      }
+
       &.-settings {
         margin-top: auto;
       }
